# wasm-chip8

./: .gitignore  Cargo.toml  README.md  index.html  index.js  index.ts  package-lock.json  package.json  rollup.config.js  webpack.config.js
backend/: Cargo.toml
backend/src/: chip8.rs  clock.rs  cpu.rs  display.rs  emulator.rs  input.rs  lib.rs  logger.rs  memory.rs
backend/src/cpu/: cpu.rs  debug.rs  disassembly.rs  instruction.rs  log.rs  mod.rs
backend/src/debug/: cpu.rs  disassembly.rs  input.rs  memory.rs  mod.rs
backend/src/display/: display.rs
backend/src/input/: mod.rs
backend/src/keypad/: debug.rs  mod.rs
backend/src/memory/: debug.rs  memory.rs  mod.rs
backend/src/util/: panic.rs
chip8/: README.md  cpu.c  cpu.h  index.html  index.js  package-lock.json  package.json
chip8/src/: cpu.ts  display.ts  index.ts  ram.ts
example/: package-lock.json  package.json
example/src/: index.css  index.jsx
example/src/components/: Audio.jsx  Display.jsx  Indicator.jsx  Keypad.jsx  Performance.jsx  Video.jsx  index.js
examples/: vanilla.html
frontend/: audio.ts  debug.ts  hooks.js  hooks.ts  index.jsx  index.ts  index.tsx
frontend/modules/: Audio.jsx  Cartridge.jsx  Interface.jsx  Performance.jsx  index.js
lib/: Cargo.toml
lib/src/: cpu.rs  display.rs  lib.rs
playground/: package-lock.json  package.json
playground/src/: index.html  index.jsx
src/: App.jsx  cpu.rs  display.rs  index.js  index.ts  keypad.rs  lib.rs  main.rs  memory.rs  ram.rs  utils.js
src/components/: Chip8.jsx  Display.jsx
src/hooks/: audio.js  index.js  keyboard.js  settings.js
