[package]
name = "chip8"
version = "0.1.0"
authors = ["Lucien Le Roux <rshn.kabu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
wasm-bindgen = "0.2.74"
getrandom = { version = "0.2", features = ["js"] }

# https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["cdylib"]
