[package]
name = "wasm-chip8"
version = "0.1.0"
authors = ["Lucien Le Roux <lucien@le-roux.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3.51"
log = { version = "0.4.16", features = ["std"] }

# https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["cdylib"]
