[package]
name = "chip8"
version = "0.1.0"
authors = ["Lucien Le Roux <rshn.kabu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
console_error_panic_hook = "0.1.6"

# https://doc.rust-lang.org/reference/linkage.html
[lib]
crate-type = ["cdylib"]
